src/custom/snapshots/hugr_llvm__custom__prelude__test__prelude_extension_const_usize@llvm14.snap
---
source: src/custom/prelude.rs
expression: module.to_string()
---
; ModuleID = 'test_context'
source_filename = "test_context"

define i64 @_hl.main.1() {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  ret i64 17
}
