src/custom/snapshots/hugr_llvm__custom__prelude__test__prelude_extension_const_usize@pre-mem2reg@llvm14.snap
---
source: src/custom/prelude.rs
expression: module.to_string()
---
; ModuleID = 'test_context'
source_filename = "test_context"

define i64 @_hl.main.1() {
alloca_block:
  %"0" = alloca i64, align 8
  %"5_0" = alloca i64, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i64 17, i64* %"5_0", align 4
  %"5_01" = load i64, i64* %"5_0", align 4
  store i64 %"5_01", i64* %"0", align 4
  %"02" = load i64, i64* %"0", align 4
  ret i64 %"02"
}
