src/custom/snapshots/hugr_llvm__custom__prelude__test__prelude_new_array@llvm14.snap
---
source: src/custom/prelude.rs
expression: module.to_string()
---
; ModuleID = 'test_context'
source_filename = "test_context"

define [2 x i16] @_hl.main.1(i16 %0, i16 %1) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %2 = alloca [2 x i16], align 2
  %3 = load [2 x i16], [2 x i16]* %2, align 2
  %4 = insertvalue [2 x i16] %3, i16 %0, 0
  %5 = insertvalue [2 x i16] %3, i16 %1, 1
  ret [2 x i16] %3
}
