src/custom/snapshots/hugr_llvm__custom__prelude__test__prelude_new_array@pre-mem2reg@llvm14.snap
---
source: src/custom/prelude.rs
expression: module.to_string()
---
; ModuleID = 'test_context'
source_filename = "test_context"

define [2 x i16] @_hl.main.1(i16 %0, i16 %1) {
alloca_block:
  %"0" = alloca [2 x i16], align 2
  %"2_0" = alloca i16, align 2
  %"2_1" = alloca i16, align 2
  %"4_0" = alloca [2 x i16], align 2
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i16 %0, i16* %"2_0", align 2
  store i16 %1, i16* %"2_1", align 2
  %"2_01" = load i16, i16* %"2_0", align 2
  %"2_12" = load i16, i16* %"2_1", align 2
  %2 = alloca [2 x i16], align 2
  %3 = load [2 x i16], [2 x i16]* %2, align 2
  %4 = insertvalue [2 x i16] %3, i16 %"2_01", 0
  %5 = insertvalue [2 x i16] %3, i16 %"2_12", 1
  store [2 x i16] %3, [2 x i16]* %"4_0", align 2
  %"4_03" = load [2 x i16], [2 x i16]* %"4_0", align 2
  store [2 x i16] %"4_03", [2 x i16]* %"0", align 2
  %"04" = load [2 x i16], [2 x i16]* %"0", align 2
  ret [2 x i16] %"04"
}
