src/custom/snapshots/hugr_llvm__custom__prelude__test__prelude_print@pre-mem2reg@llvm14.snap
---
source: src/custom/prelude.rs
expression: module.to_string()
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [14 x i8] c"Hello, world!\00", align 1
@prelude.print_template = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1

define void @_hl.main.1() {
alloca_block:
  %"5_0" = alloca i8*, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @0, i32 0, i32 0), i8** %"5_0", align 8
  %"5_01" = load i8*, i8** %"5_0", align 8
  %0 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @prelude.print_template, i32 0, i32 0), i8* %"5_01")
  ret void
}

declare i32 @printf(i8*, ...)
